modify around mainBowerFiles and delete npm start at README.md

--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,7 @@
     "highlightjs": {
       "main": [
         "**/highlight.pack.js",
-        "**/default.css",
-        "**/styles/*.css"
+        "**/monokai.css"
       ],
       "dependencies": null
     }
