add LICENSE.md and modify package.json on line 25

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gulp-plumber": "latest",
     "gulp-prettify": "latest",
     "gulp-rename": "latest",
-    "gulp-ruby-sass": "latest",
+    "gulp-ruby-sass": "0.7.1",
     "gulp.spritesmith": "latest",
     "gulp-uglify": "latest",
     "main-bower-files": "latest"
