--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "myproject",
-  "version": "1.0.0",
-  "description": "",
+  "name": "project-starter",
+  "version": "0.0.0",
+  "description": "project starter for web development with gulp",
+  "uri": "https://github.com/featherplain/project-starter",
   "main": "gulpfile.js",
   "scripts": {
   	"gulp-init": "bower install; gulp init",
@@ -17,6 +18,7 @@
     "gulp-flatten": "latest",
     "gulp-filter": "latest",
     "gulp-jade": "latest",
+    "gulp-imagemin": "latest",
     "gulp-load-plugins": "latest",
     "gulp-pleeease": "latest",
     "gulp-plumber": "latest",
