update gulp-ruby-sass to 1.0.1

--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "devDependencies": {
     "browser-sync": "latest",
     "gulp": "latest",
+    "gulp-autoprefixer": "latest",
     "gulp-concat": "latest",
+    "gulp-csso": "latest",
     "gulp-data": "latest",
     "gulp-flatten": "latest",
     "gulp-filter": "latest",
     "gulp-jade": "latest",
     "gulp-imagemin": "latest",
     "gulp-load-plugins": "latest",
-    "gulp-pleeease": "latest",
     "gulp-plumber": "latest",
     "gulp-prettify": "latest",
     "gulp-rename": "latest",
-    "gulp-ruby-sass": "0.7.1",
+    "gulp-ruby-sass": "1.0.1",
     "gulp.spritesmith": "latest",
     "gulp-uglify": "latest",
     "main-bower-files": "latest"
