--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,16 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "foundation": "*"
   },
   "exportsOverride": {
     "jquery": {
       "": "**/jquery.js"
+    },
+    "foundation": {
+      "scss": "scss",
+      "js": "js"
     }
   }
 }
