--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "gulpfile.js",
   "scripts": {
     "gulp-server": "gulp default --mode server",
-  	"gulp-init": "bower install; gulp init",
+    "gulp-init": "bower install; gulp init",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Megumi Hano",
@@ -18,18 +18,19 @@
     "gulp-concat": "latest",
     "gulp-csso": "latest",
     "gulp-data": "latest",
-    "gulp-flatten": "latest",
     "gulp-filter": "latest",
-    "gulp-jade": "latest",
+    "gulp-flatten": "latest",
     "gulp-imagemin": "latest",
+    "gulp-jade": "latest",
     "gulp-load-plugins": "latest",
     "gulp-plumber": "latest",
     "gulp-prettify": "latest",
     "gulp-rename": "latest",
     "gulp-ruby-sass": "1.0.1",
-    "gulp.spritesmith": "latest",
+    "gulp-shell": "latest",
     "gulp-svg-sprite": "latest",
     "gulp-uglify": "latest",
+    "gulp.spritesmith": "latest",
     "main-bower-files": "latest",
     "run-sequence": "^1.1.0",
     "yargs": "^3.12.0"
