change gulp-sass from gulp-ruby-sass

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "browser-sync": "latest",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
+    "gulp-changed": "^1.3.0",
     "gulp-concat": "latest",
+    "gulp-css-globbing": "^0.1.8",
     "gulp-csso": "latest",
     "gulp-data": "latest",
-    "gulp-filter": "latest",
     "gulp-flatten": "latest",
     "gulp-imagemin": "latest",
     "gulp-jade": "latest",
@@ -26,13 +27,14 @@
     "gulp-plumber": "latest",
     "gulp-prettify": "latest",
     "gulp-rename": "latest",
-    "gulp-ruby-sass": "1.0.1",
-    "gulp-shell": "latest",
+    "gulp-sass": "^2.0.4",
+    "gulp-shell": "^0.5.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-sprite": "latest",
     "gulp-uglify": "latest",
     "gulp.spritesmith": "latest",
     "main-bower-files": "latest",
-    "run-sequence": "^1.1.0",
+    "run-sequence": "^1.1.4",
     "yargs": "^3.12.0"
   }
 }
