--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "project-starter",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Project starter for web development with gulp + foundation",
   "uri": "https://github.com/featherplain/project-starter",
   "main": "gulpfile.js",
   "scripts": {
+    "gulp": "gulp",
     "gulp-server": "gulp default --mode server",
     "gulp-init": "bower install; gulp init",
     "test": "echo \"Error: no test specified\" && exit 1"
