--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "gulp": "gulp",
     "gulp-server": "gulp default --mode server",
-    "gulp-init": "bower install; gulp init",
+    "gulp-init": "npm install foundation-sites; bash src/shell/foundation.sh",
     "gulp-zip": "gulp zip:dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
