--- a/package.json
+++ b/package.json
@@ -17,17 +17,13 @@
     "browser-sync": "latest",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
-    "gulp-changed": "^1.3.0",
     "gulp-concat": "latest",
     "gulp-css-globbing": "^0.1.8",
-    "gulp-csso": "latest",
     "gulp-data": "latest",
-    "gulp-flatten": "latest",
     "gulp-imagemin": "latest",
-    "gulp-jade": "latest",
     "gulp-load-plugins": "latest",
     "gulp-plumber": "latest",
-    "gulp-prettify": "latest",
+    "gulp-pug": "^3.0.4",
     "gulp-rename": "latest",
     "gulp-sass": "^2.0.4",
     "gulp-shell": "^0.5.0",
@@ -35,7 +31,6 @@
     "gulp-svg-sprite": "latest",
     "gulp-uglify": "latest",
     "gulp.spritesmith": "latest",
-    "main-bower-files": "latest",
     "run-sequence": "^1.1.4",
     "yargs": "^3.12.0"
   }
