--- a/package.json
+++ b/package.json
@@ -8,30 +8,29 @@
     "gulp": "gulp",
     "gulp-server": "gulp default --mode server",
     "gulp-init": "npm install foundation-sites --save && bash src/shell/foundation.sh",
-    "gulp-zip": "gulp zip:dist",
+    "gulp-zip": "bash src/shell/zip.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Megumi Hano",
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "latest",
-    "gulp": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-concat": "latest",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-concat": "^2.6.0",
     "gulp-css-globbing": "^0.1.8",
-    "gulp-data": "latest",
-    "gulp-imagemin": "latest",
-    "gulp-load-plugins": "latest",
-    "gulp-plumber": "latest",
+    "gulp-data": "^1.2.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.4",
-    "gulp-rename": "latest",
-    "gulp-sass": "^2.0.4",
-    "gulp-shell": "^0.5.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-svg-sprite": "latest",
-    "gulp-uglify": "latest",
-    "gulp.spritesmith": "latest",
-    "run-sequence": "^1.1.4",
-    "yargs": "^3.12.0"
+    "gulp-svg-sprite": "^1.3.5",
+    "gulp-uglify": "^2.0.0",
+    "gulp.spritesmith": "^6.2.1",
+    "run-sequence": "^1.2.2",
+    "yargs": "^3.32.0"
   }
 }
