--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-css-globbing": "^0.1.8",
     "gulp-data": "^1.2.1",
     "gulp-imagemin": "^3.0.3",
+    "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.4",
