--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "uri": "https://github.com/featherplain/project-starter",
   "main": "gulpfile.js",
   "scripts": {
-    "setup": "npm install && bash src/shell/foundation.sh && bash src/shell/iconfont.sh"
+    "setup": "npm install && bash src/shell/foundation.sh",
     "gulp": "gulp",
     "gulp-server": "gulp default --mode server",
     "gulp-zip": "bash src/shell/zip.sh",
