--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-starter",
-  "version": "0.5.0",
+  "version": "0.4.0",
   "description": "Project starter for web development using gulp",
   "uri": "https://github.com/featherplain/project-starter",
   "main": "gulpfile.js",
@@ -25,7 +25,9 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
+    "babelify": "^7.3.0",
     "browser-sync": "latest",
+    "browserify": "^13.1.0",
     "eslint": "^3.6.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -46,6 +48,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.6.3",
-    "foundation-sites": "^6.2.3"
+    "foundation-sites": "^6.2.3",
+    "smoothscroll": "^0.2.2"
   }
 }
