--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-svg-sprite": "^1.3.5",
     "gulp-uglify": "^2.0.0",
     "gulp.spritesmith": "^6.2.1",
+    "vinyl-source-stream": "^1.1.0",
     "yargs": "^3.32.0"
   },
   "dependencies": {
